--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
+    "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.13",
     "uuid": "^11.0.3",
