--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.13",
+    "swiper": "^11.1.15",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
@@ -30,6 +31,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
