--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
+    "react-input-mask": "^2.0.4",
+    "react-input-mask-next": "^3.0.0-alpha.12",
     "react-router-dom": "^6.28.0",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0",
@@ -32,6 +34,7 @@
     "@eslint/js": "^9.13.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-input-mask": "^3.0.6",
     "@types/swiper": "^5.4.3",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
