--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/material": "^7.2.0",
     "axios": "^1.7.9",
     "firebase": "^11.0.2",
     "localforage": "^1.10.0",
